--- a/src/component/clientnav/index.scss
+++ b/src/component/clientnav/index.scss
@@ -19,6 +19,7 @@
     width: 120px;
     display: flex;
     align-items: center;
+    cursor: pointer;
     span {
       color: #fff;
       margin-left: 10px;
@@ -27,7 +28,7 @@
   .search-input {
     align-items: center;
     border-radius: 20px;
-    padding: 0px 10px;
+    padding: 0px 16px;
     overflow: hidden;
     width: 100%;
     max-width: 400px;
@@ -36,6 +37,7 @@
     border: 1px solid rgb(241, 241, 241);
     outline: none;
     height: 40px;
+    font-size: 13px;
   }
 }
 
@@ -59,6 +61,51 @@
       align-items: center;
       gap: 5px;
       cursor: pointer;
+    }
+  }
+}
+.mark {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+.container-menu {
+  position: relative;
+
+  .menu {
+    position: absolute;
+    top: 0px;
+    left: 8px;
+    background-color: #fff;
+    width: 200px;
+    font-weight: 600;
+    font-size: 13px;
+    z-index: 100;
+    .menu-item {
+      padding: 8px 10px;
+      cursor: pointer;
+    }
+    .menu-item:hover {
+      background-color: #ed1c24;
+      color: #fff;
+    }
+  }
+  .sub-menu {
+    position: absolute;
+    top: 0px;
+    left: 208px;
+    background-color: #fff;
+    width: 900px;
+    font-weight: 600;
+    font-size: 13px;
+    height: 284px;
+    z-index: 200;
+    width: 1012px;
+    .menu-item {
+      padding: 8px 10px;
     }
   }
 }
