--- a/src/page/client/home/index.scss
+++ b/src/page/client/home/index.scss
@@ -42,3 +42,13 @@
     }
   }
 }
+.time {
+  padding: 6px;
+  // height: 28px;
+  border-radius: 0px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
+  background: rgb(233, 37, 37);
+  color: white;
+  text-align: center;
+  margin-left: 10px;
+}
