--- a/src/component/clientnav/index.scss
+++ b/src/component/clientnav/index.scss
@@ -25,6 +25,35 @@
       margin-left: 10px;
     }
   }
+  .nav-cart {
+    position: relative;
+    .number-product {
+      position: absolute;
+      height: 20px;
+      width: 20px;
+      color: #ed1c24;
+      background-color: #fff;
+      border-radius: 50%;
+      top: -10px;
+      right: 80px;
+      text-align: center;
+      animation: pulse 2s infinite;
+      font-size: 11px;
+      line-height: 19px;
+      opacity: 0.9;
+    }
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.3);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
+  }
   .search-input {
     align-items: center;
     border-radius: 20px;
