--- a/src/page/client/payment/index.scss
+++ b/src/page/client/payment/index.scss
@@ -109,7 +109,7 @@
         margin-bottom: 4px;
         .total-payment-row-right-total {
           font-size: 24px;
-          color: rgb(237, 28, 36);
+          color: #ed1c24;
         }
       }
     }
