--- a/src/page/client/chat/index.scss
+++ b/src/page/client/chat/index.scss
@@ -1,11 +1,23 @@
 .chat-client {
-  position: relative;
-  height: calc(100vh - 108px);
+  position: fixed;
+  bottom: 0;
+  right: 80px;
+  width: 320px;
+  height: 460px;
+  box-shadow: rgba(153, 153, 153, 0.6) 0px 0px 5px 0px;
 
+  .chat-header {
+    background-color: #ff3e34;
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px 14px;
+    color: #fff;
+    font-weight: 500;
+  }
   .message-container {
-    overflow-y: scroll;
+    overflow-y: auto;
     height: calc(100% - 40px);
-    padding: 20px;
+    padding: 14px;
 
     .mess-system {
       display: flex;
@@ -59,11 +71,10 @@
   }
 
   .chat-bar {
-    position: absolute;
     bottom: 0;
     right: 0;
     left: 0;
-    padding: 10px 20px;
+    padding: 10px 14px;
     background-color: white;
     position: relative;
 
@@ -76,16 +87,15 @@
       max-height: 100px;
       outline: none;
       overflow: hidden;
-      padding: 8px 16px;
+      padding: 8px 10px;
       width: 100%;
     }
 
     .icon-right {
       position: absolute;
-      right: 38px;
+      right: 24px;
       top: 18px;
       display: flex;
-      gap: 5px;
       opacity: 0.7;
       cursor: pointer;
     }
