--- a/src/page/client/cart/index.scss
+++ b/src/page/client/cart/index.scss
@@ -30,6 +30,10 @@
         // border-top: 1px solid #ed1c24;
         // border-bottom: 1px solid #ed1c24;
       }
+      .original-price {
+        text-decoration: line-through;
+        text-decoration-color: #ed1c24;
+      }
     }
     .footer-delete {
       border-top: 1px solid rgb(247, 247, 247);
@@ -67,5 +71,45 @@
         margin-top: 10px;
       }
     }
+  }
+
+  .empty-cart {
+    height: 400px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.status-order {
+  display: flex;
+  .status-select {
+    background-color: #ed1c24;
+    color: #fff;
+  }
+  > div {
+    padding: 10px 20px;
+    cursor: pointer;
+    &:hover {
+      background-color: #ed1c24;
+      color: #fff;
+    }
+  }
+}
+
+.cart-list-items {
+  .MuiButtonBase-root {
+    background-color: #f10808;
+    color: #fff;
+    padding: 0px 20px;
+  }
+  .MuiAccordionSummary-content {
+    display: flex;
+    justify-content: space-between;
+  }
+  .MuiAccordionDetails-root {
+    padding-bottom: 0px;
   }
 }
