--- a/src/page/client/infoaccount/index.scss
+++ b/src/page/client/infoaccount/index.scss
@@ -1,7 +1,7 @@
 .profile {
-  width: 100%;
+  width: 800px;
   background-color: #fff;
-  padding: 20px 10px;
+  padding: 30px 10px;
   .title {
     margin-left: 8px;
     margin-bottom: 10px;
@@ -12,7 +12,6 @@
     display: flex;
     justify-content: space-between;
     .profile-item-left {
-      width: 180px;
       line-height: 38px;
     }
     .profile-item-right {
@@ -24,5 +23,12 @@
     .red {
       color: rgb(237, 28, 36);
     }
+    .MuiInputBase-input {
+      font-size: 13px;
+    }
+  }
+  .MuiSelect-select {
+    padding: 10px 16px;
+    font-size: 14px;
   }
 }
