--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,17 @@ code {
   width: 1220px;
 }
 
+.text-overflow {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: red !important;
+}
