--- a/src/page/client/home/index.scss
+++ b/src/page/client/home/index.scss
@@ -30,7 +30,17 @@
     overflow: hidden;
     border-radius: 8px;
     border: 1px solid transparent;
-
+    position: relative;
+    .sale-percent {
+      position: absolute;
+      top: 10px;
+      background-color: #ff3e34;
+      left: 10px;
+      padding: 4px 10px;
+      color: #fff;
+      border-bottom-left-radius: 8px;
+      border-bottom-right-radius: 2px;
+    }
     &:hover {
       border-color: #ff3e34;
     }
