--- a/src/page/client/home/index.scss
+++ b/src/page/client/home/index.scss
@@ -47,6 +47,9 @@
     .product-img {
       width: 190px;
       height: 190px;
+      img {
+        object-fit: cover;
+      }
     }
     .product-name,
     .product-unit {
