change logo shmarket and image cart

--- a/src/component/clientnav/index.scss
+++ b/src/component/clientnav/index.scss
@@ -8,6 +8,12 @@
   right: 0;
   left: 0;
   z-index: 100;
+  .text-logo {
+    color: #fff;
+    font-weight: 600;
+    font-size: 28px;
+
+  }
 }
 .main-container {
   padding: 10px 0px;
