--- a/src/component/clientnav/index.scss
+++ b/src/component/clientnav/index.scss
@@ -171,7 +171,8 @@
     .sub-menu {
       position: absolute;
       top: 0px;
-      left: 208px;
+      left: 198px;
+      bottom: 0;
       background-color: #fff;
       // width: 900px;
       font-weight: 600;
